--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: SEER Data Hackathon
 description: Two-day sprint to explore SEER data, collaborate across disciplines, and draft abstracts.
-remote_theme: mmistakes/minimal-mistakes
 plugins:
-  - jekyll-include-cache
+  - jekyll-remote-theme
+remote_theme: pages-themes/cayman@v0.2.0
